Update publications and code

--- a/code.html
+++ b/code.html
@@ -74,10 +74,10 @@
 
 			<ul class="actions fit">
 				<li><a href="#mapping" class="button fit" target="_self">Mapping</a></li>
+				<li><a href="#prediction" class="button fit" target="_self">Prediction</a></li>
 				<li><a href="#planning" class="button fit" target="_self">Planning</a></li>
-				<li><a href="#simulation" class="button fit" target="_self">Simulation</a></li>
 				<li><a href="#utility" class="button fit" target="_self">Utility</a></li>
-				<li><a href="#phenotyping" class="button fit" target="_self">Phenotyping</a></li>
+				<li><a href="#others" class="button fit" target="_self">Others</a></li>
 			</ul>
 		</section>
 
@@ -87,10 +87,20 @@
 
 			<table>
 				<tr id="khronos"> </tr>
+				<tr id="clio"> </tr>
 				<tr id="dynablox"> </tr>
 				<tr id="panopticmapping"> </tr>
 				<tr id="neuralblox"> </tr>
+			</table>
+		</section>
+
+		<!-- Prediction -->
+		<section id="prediction">
+			<h1>Prediction</h1>
+
+			<table>
 				<tr id="3dvsg"> </tr>
+				<tr id="lhtp"> </tr>
 			</table>
 		</section>
 
@@ -107,29 +117,21 @@
 			</table>
 		</section>
 
-		<!-- Simulation -->
-		<section id="simulation">
-			<h1>Simulation</h1>
-
-			<table>
-				<tr id="unrealairsim"> </tr>
-				<tr id="unrealcv"> </tr>
-			</table>
-		</section>
-
 		<!-- Utility -->
 		<section id="utility">
 			<h1>Utility</h1>
 
 			<table>
+				<tr id="unrealairsim"> </tr>
+				<tr id="unrealcv"> </tr>
 				<tr id="configutilities_new"> </tr>
 				<tr id="configutilities"> </tr>
 			</table>
 		</section>
 
-		<!-- Phenotyping -->
-		<section id="phenotyping">
-			<h1>Phenotyping</h1>
+		<!-- Others -->
+		<section id="others">
+			<h1>Others</h1>
 
 			<table>
 				<tr id="pheno"> </tr>
