--- a/code.html
+++ b/code.html
@@ -114,6 +114,7 @@
 				<tr id="cvaeplanning"> </tr>
 				<tr id="eal"> </tr>
 				<tr id="ssc"> </tr>
+				<tr id="scouting_ipp"> </tr>
 			</table>
 		</section>
 
@@ -122,9 +123,10 @@
 			<h1>Utility</h1>
 
 			<table>
+				<tr id="configutilities_new"> </tr>
+				<tr id="spatial_hash"> </tr>
 				<tr id="unrealairsim"> </tr>
 				<tr id="unrealcv"> </tr>
-				<tr id="configutilities_new"> </tr>
 				<tr id="configutilities"> </tr>
 			</table>
 		</section>
