--- a/students.html
+++ b/students.html
@@ -9,196 +9,150 @@
 <html>
 
 <head>
-	<title>Lukas Schmid</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<base target="_blank">
+  <title>Lukas Schmid</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <base target="_blank">
 </head>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RKGKPT9DC6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
-
   gtag('config', 'G-RKGKPT9DC6');
 </script>
 
 <body class="is-preload">
+  <header id="header"></header>
+  <nav id="nav"></nav>
 
-	<!-- Header -->
-	<header id="header">
-		<div class="inner">
-			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.png" alt="" /></a>
-			<h1>
-				<ul class="no-bullets" style="padding-bottom: 2em;">
-					<li><strong>Lukas Schmid</strong>, PhD</li>
-					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a></li>
-				</ul>
-			</h1>
-		</div>
-	</header>
+  <!-- Main -->
+  <div id="main">
 
-	<!-- Navigation -->
-	<nav id="nav">
-		<ul>
-			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
-			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
-			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html" target="_self">Teaching</a></li>
-			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
-		</ul>
-	</nav>
+    <!-- Welcome -->
+    <section id="welcome">
+      <header class="major">
+        <h1>Teaching</h1>
+      </header>
+      <p> I'm passionate about the education of the next generation of scientists and engineers. Next to teaching
+        lectures and
+        exercise classes, I strongly contribute to this through the supervision of Master, Semester,
+        and
+        Bachelor Theses, or other research projects.
+      </p>
 
-	<!-- Main -->
-	<div id="main">
+      <ul class="actions">
+        <li><a href="#lectures" class="button" target="_self">Lectures</a></li>
+        <li><a href="#projects" class="button" target="_self">Student Projects</a></li>
+      </ul>
+    </section>
 
-		<!-- Welcome -->
-		<section id="welcome">
-			<header class="major">
-				<h1>Teaching</h1>
-			</header>
-			<p> I'm passionate about the education of the next generation of scientists and engineers. Next to teaching lectures and
-				exercise classes, I strongly contribute to this through the supervision of Master, Semester,
-				and
-				Bachelor Theses, or other research projects.
-			</p>
+    <!-- Lectures -->
+    <section id="lectures">
+      <h1>Lectures</h1>
+      <p> I was a guest lecturer and/or teaching assistantfor the following courses: </p>
 
-			<ul class="actions">
-				<li><a href="#lectures" class="button" target="_self">Lectures</a></li>
-				<li><a href="#projects" class="button" target="_self">Student Projects</a></li>
-			</ul>
-		</section>
+      <ul>
+        <!-- class="emphasized"> -->
+        <li><a href="https://github.com/UMich-CURLY-teaching/UMich-ROB-530-public"><strong>Mobile Robotics: Methods and
+              Algorithms</strong></a>, Graduate course at <a href="https://robotics.umich.edu/">University of
+            Michigan</a>, with <a href="https://robotics.umich.edu/profile/maani-ghaffari/">Prof.
+            Maani Ghaffari</a>. (2024)</li>
+        <li><a href="https://vnav.mit.edu/"><strong>Visual Navigation for Autonomous
+              Vehicles</strong></a>, Graduate course at <a href="https://www.mit.edu/">MIT</a>, with <a
+            href="https://lucacarlone.mit.edu/">Prof.
+            Luca Carlone</a>. (2023)</li>
+        <li><a
+            href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&semkez=2023S&lerneinheitId=167009&"><strong>Autonomous
+              Mobile Robots</strong></a>, M.Sc. course at <a href="https://ethz.ch/en.html">ETH
+            Zürich</a>, with <a
+            href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+            Roland Siegwart</a>. (2020, 2021, 2022)</li>
 
-		<!-- Lectures -->
-		<section id="lectures">
-			<h1>Lectures</h1>
-			<p> I was a guest lecturer and/or teaching assistantfor the following courses: </p>
+        <li><a
+            href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lerneinheitId=170418&semkez=2023S&ansicht=LEHRVERANSTALTUNGEN&lang=en"><strong>Perception
+              and Learning for Robotics</strong></a>, M.Sc. course at <a href="https://ethz.ch/de.html">ETH Zürich</a>,
+          with <a
+            href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+            Roland Siegwart</a>. (2020, 2021, 2022)</li>
 
-			<ul>
-				<!-- class="emphasized"> -->
-				<li><a
-					href="https://github.com/UMich-CURLY-teaching/UMich-ROB-530-public"><strong>Mobile Robotics: Methods and Algorithms</strong></a>, Graduate course at <a href="https://robotics.umich.edu/">University of Michigan</a>, with <a
-					href="https://robotics.umich.edu/profile/maani-ghaffari/">Prof.
-					Maani Ghaffari</a>. (2024)</li>
-				<li><a
-					href="https://vnav.mit.edu/"><strong>Visual Navigation for Autonomous
-						Vehicles</strong></a>, Graduate course at <a href="https://www.mit.edu/">MIT</a>, with <a
-					href="https://lucacarlone.mit.edu/">Prof.
-					Luca Carlone</a>. (2023)</li>
-				<li><a
-					href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&semkez=2023S&lerneinheitId=167009&"><strong>Autonomous
-						Mobile Robots</strong></a>, M.Sc. course at <a href="https://ethz.ch/en.html">ETH
-					Zürich</a>, with <a
-					href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
-					Roland Siegwart</a>. (2020, 2021, 2022)</li>
+        <li><a
+            href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&lerneinheitId=162317&semkez=2022W&ansicht=LEHRVERANSTALTUNGEN&"><strong>Advanced
+              Machine Learning</strong></a>, M.Sc. course at <a href="https://ethz.ch/de.html">ETH
+            Zürich</a>, with <a href="https://inf.ethz.ch/people/person-detail.buhmann.html">Prof. Joachim
+            Buhmann</a>.
+          (2018)</li>
+      </ul>
 
-				<li><a
-					href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lerneinheitId=170418&semkez=2023S&ansicht=LEHRVERANSTALTUNGEN&lang=en"><strong>Perception
-						and Learning for Robotics</strong></a>, M.Sc. course at <a
-					href="https://ethz.ch/de.html">ETH Zürich</a>, with <a
-					href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
-					Roland Siegwart</a>. (2020, 2021, 2022)</li>
+    </section>
 
-				<li><a
-					href="https://www.vorlesungen.ethz.ch/Vorlesungsverzeichnis/lerneinheit.view?lang=en&lerneinheitId=162317&semkez=2022W&ansicht=LEHRVERANSTALTUNGEN&"><strong>Advanced
-						Machine Learning</strong></a>, M.Sc. course at <a href="https://ethz.ch/de.html">ETH
-					Zürich</a>, with <a href="https://inf.ethz.ch/people/person-detail.buhmann.html">Prof. Joachim
-					Buhmann</a>.
-					(2018)</li>
-			</ul>
-
-		</section>
-
-		<!-- Student Projects -->
-		<section id="projects">
-			<h1>Student Projects</h1>
-			<p> I have supervised over 45 students in individual projects and theses. I regularly upload project proposals and also accept proactive applications of highly motivated
-				students. If
-				you are interested in working on a project in the fields of robotic scene understanding, active
-				perception, or
-				long-term and continual learning, please send a short CV and transcript to <a
-					href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>. Please ensure that you are accepted/eligible for an MIT
-				project first.
-				<br />
-				<br />
-				Examples of past projects:
-			</p>
+    <!-- Student Projects -->
+    <section id="projects">
+      <h1>Student Projects</h1>
+      <p> I have supervised over 45 students in individual projects and theses. I regularly upload project proposals and
+        also accept proactive applications of highly motivated
+        students. If
+        you are interested in working on a project in the fields of robotic scene understanding, active
+        perception, or
+        long-term and continual learning, please send a short CV and transcript to <a
+          href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>. Please ensure that you are accepted/eligible for an MIT
+        project first.
+        <br />
+        <br />
+        Examples of past projects:
+      </p>
 
 
-			<div class="row">
-				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/student_projects/active_panoptic_mapping.jpg" class="image fit thumb"><img
-							src="images/student_projects/active_panoptic_mapping.jpg" alt="" /></a>
-				</article>
+      <div class="row">
+        <article class="col-4 col-12-xsmall work-item">
+          <a href="images/student_projects/active_panoptic_mapping.jpg" class="image fit thumb"><img
+              src="images/student_projects/active_panoptic_mapping.jpg" alt="" /></a>
+        </article>
 
-				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/student_projects/consistent_panoptic_mapping.jpg" class="image fit thumb"><img
-							src="images/student_projects/consistent_panoptic_mapping.jpg" alt="" /></a>
-				</article>
+        <article class="col-4 col-12-xsmall work-item">
+          <a href="images/student_projects/consistent_panoptic_mapping.jpg" class="image fit thumb"><img
+              src="images/student_projects/consistent_panoptic_mapping.jpg" alt="" /></a>
+        </article>
 
-				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/student_projects/incremental_scenegraph_construction.jpg"
-						class="image fit thumb"><img
-							src="images/student_projects/incremental_scenegraph_construction.jpg" alt="" /></a>
-				</article>
+        <article class="col-4 col-12-xsmall work-item">
+          <a href="images/student_projects/incremental_scenegraph_construction.jpg" class="image fit thumb"><img
+              src="images/student_projects/incremental_scenegraph_construction.jpg" alt="" /></a>
+        </article>
 
-				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/student_projects/neural_robotic_mapping.jpg" class="image fit thumb"><img
-							src="images/student_projects/neural_robotic_mapping.jpg" alt="" /></a>
-				</article>
+        <article class="col-4 col-12-xsmall work-item">
+          <a href="images/student_projects/neural_robotic_mapping.jpg" class="image fit thumb"><img
+              src="images/student_projects/neural_robotic_mapping.jpg" alt="" /></a>
+        </article>
 
-				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/student_projects/scene_completion_for_exploration.jpg" class="image fit thumb"><img
-							src="images/student_projects/scene_completion_for_exploration.jpg" alt="" /></a>
-				</article>
+        <article class="col-4 col-12-xsmall work-item">
+          <a href="images/student_projects/scene_completion_for_exploration.jpg" class="image fit thumb"><img
+              src="images/student_projects/scene_completion_for_exploration.jpg" alt="" /></a>
+        </article>
 
-				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/student_projects/lidar_motion_detection.jpg" class="image fit thumb"><img
-							src="images/student_projects/lidar_motion_detection.jpg" alt="" /></a>
-				</article>
-			</div>
+        <article class="col-4 col-12-xsmall work-item">
+          <a href="images/student_projects/lidar_motion_detection.jpg" class="image fit thumb"><img
+              src="images/student_projects/lidar_motion_detection.jpg" alt="" /></a>
+        </article>
+      </div>
 
-		</section>
+    </section>
 
-	</div>
+  </div>
 
-	<!-- Footer -->
-	<footer id="footer">
-		<div class="inner">
-			<ul class="icons">
-				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span
-							class="label">Github</span></a>
-				</li>
-				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
-							class="label">LinkedIn</span></a></li>
-				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
-							class="label">Google Scholar</span></a></li>
-			</ul>
-			<ul class="icons">
-				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
-							class="label">ORCID</span></a></li>
-				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14"
-						class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a>
-				</li>
-			</ul>
-			<ul class="copyright">
-				<li>&copy; Lukas Schmid</li>
-				<li>Based on Designs by <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</div>
-	</footer>
+  <!-- Footer -->
+  <footer id="footer"></footer>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.poptrox.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.poptrox.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/build-header-footer.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
