--- a/code.html
+++ b/code.html
@@ -11,173 +11,129 @@
 <html>
 
 <head>
-	<title>Lukas Schmid</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<base target="_blank">
-	<script async defer src="https://buttons.github.io/buttons.js"></script>
+  <title>Lukas Schmid</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <base target="_blank">
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RKGKPT9DC6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
-
   gtag('config', 'G-RKGKPT9DC6');
 </script>
 
 <body class="is-preload">
+  <header id="header"></header>
+  <nav id="nav"></nav>
 
-	<!-- Header -->
-	<header id="header">
-		<div class="inner">
-			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.png" alt="" /></a>
-			<h1>
-				<ul class="no-bullets" style="padding-bottom: 2em;">
-					<li><strong>Lukas Schmid</strong>, PhD</li>
-					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a></li>
-				</ul>
-			</h1>
-		</div>
-	</header>
+  <!-- Main -->
+  <div id="main">
 
-	<!-- Navigation -->
-	<nav id="nav">
-		<ul>
-			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
-			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
-			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html" target="_self">Teaching</a></li>
-			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
-		</ul>
-	</nav>
+    <!-- Code -->
+    <section id="code">
+      <header class="major">
+        <h1>Open Source Code</h1>
+      </header>
+      <p> I am a strong supporter of the open source idea and make virtually all of my research and utility code
+        available.
+        In
+        particular, I try to pay attention to produce modular and re-usable to code to enable the community to
+        extend
+        and build upon the existing frameworks. So far, my software has received over 2k stars and 300 forks on github.
+        Please be invited to use, re-use, modify, and contribute to any of
+        the
+        projects!
+      </p>
 
-	<!-- Main -->
-	<div id="main">
+      <ul class="actions fit">
+        <li><a href="#mapping" class="button fit" target="_self">Mapping</a></li>
+        <li><a href="#prediction" class="button fit" target="_self">Prediction</a></li>
+        <li><a href="#planning" class="button fit" target="_self">Planning</a></li>
+        <li><a href="#utility" class="button fit" target="_self">Utility</a></li>
+        <li><a href="#others" class="button fit" target="_self">Others</a></li>
+      </ul>
+    </section>
 
-		<!-- Code -->
-		<section id="code">
-			<header class="major">
-				<h1>Open Source Code</h1>
-			</header>
-			<p> I am a strong supporter of the open source idea and make virtually all of my research and utility code available.
-				In
-				particular, I try to pay attention to produce modular and re-usable to code to enable the community to
-				extend
-				and build upon the existing frameworks. So far, my software has received over 2k stars and 300 forks on github. Please be invited to use, re-use, modify, and contribute to any of
-				the
-				projects!
-			</p>
+    <!-- Mapping -->
+    <section id="mapping">
+      <h1>Mapping</h1>
 
-			<ul class="actions fit">
-				<li><a href="#mapping" class="button fit" target="_self">Mapping</a></li>
-				<li><a href="#prediction" class="button fit" target="_self">Prediction</a></li>
-				<li><a href="#planning" class="button fit" target="_self">Planning</a></li>
-				<li><a href="#utility" class="button fit" target="_self">Utility</a></li>
-				<li><a href="#others" class="button fit" target="_self">Others</a></li>
-			</ul>
-		</section>
+      <table>
+        <tr id="khronos"> </tr>
+        <tr id="clio"> </tr>
+        <tr id="dynablox"> </tr>
+        <tr id="panopticmapping"> </tr>
+        <tr id="neuralblox"> </tr>
+      </table>
+    </section>
 
-		<!-- Mapping -->
-		<section id="mapping">
-			<h1>Mapping</h1>
+    <!-- Prediction -->
+    <section id="prediction">
+      <h1>Prediction</h1>
 
-			<table>
-				<tr id="khronos"> </tr>
-				<tr id="clio"> </tr>
-				<tr id="dynablox"> </tr>
-				<tr id="panopticmapping"> </tr>
-				<tr id="neuralblox"> </tr>
-			</table>
-		</section>
+      <table>
+        <tr id="3dvsg"> </tr>
+        <tr id="lhtp"> </tr>
+      </table>
+    </section>
 
-		<!-- Prediction -->
-		<section id="prediction">
-			<h1>Prediction</h1>
+    <!-- Planning -->
+    <section id="planning">
+      <h1>Planning</h1>
 
-			<table>
-				<tr id="3dvsg"> </tr>
-				<tr id="lhtp"> </tr>
-			</table>
-		</section>
+      <table>
+        <tr id="active3d"> </tr>
+        <tr id="glocal"> </tr>
+        <tr id="cvaeplanning"> </tr>
+        <tr id="eal"> </tr>
+        <tr id="ssc"> </tr>
+        <tr id="scouting_ipp"> </tr>
+      </table>
+    </section>
 
-		<!-- Planning -->
-		<section id="planning">
-			<h1>Planning</h1>
+    <!-- Utility -->
+    <section id="utility">
+      <h1>Utility</h1>
 
-			<table>
-				<tr id="active3d"> </tr>
-				<tr id="glocal"> </tr>
-				<tr id="cvaeplanning"> </tr>
-				<tr id="eal"> </tr>
-				<tr id="ssc"> </tr>
-				<tr id="scouting_ipp"> </tr>
-			</table>
-		</section>
+      <table>
+        <tr id="configutilities_new"> </tr>
+        <tr id="spatial_hash"> </tr>
+        <tr id="unrealairsim"> </tr>
+        <tr id="unrealcv"> </tr>
+        <tr id="configutilities"> </tr>
+      </table>
+    </section>
 
-		<!-- Utility -->
-		<section id="utility">
-			<h1>Utility</h1>
+    <!-- Others -->
+    <section id="others">
+      <h1>Others</h1>
 
-			<table>
-				<tr id="configutilities_new"> </tr>
-				<tr id="spatial_hash"> </tr>
-				<tr id="unrealairsim"> </tr>
-				<tr id="unrealcv"> </tr>
-				<tr id="configutilities"> </tr>
-			</table>
-		</section>
+      <table>
+        <tr id="pheno"> </tr>
+      </table>
+    </section>
 
-		<!-- Others -->
-		<section id="others">
-			<h1>Others</h1>
+  </div>
 
-			<table>
-				<tr id="pheno"> </tr>
-			</table>
-		</section>
+  <!-- Footer -->
+  <footer id="footer"></footer>
 
-	</div>
-
-	<!-- Footer -->
-	<footer id="footer">
-		<div class="inner">
-			<ul class="icons">
-				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span
-							class="label">Github</span></a>
-				</li>
-				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
-							class="label">LinkedIn</span></a></li>
-				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
-							class="label">Google Scholar</span></a></li>
-			</ul>
-			<ul class="icons">
-				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
-							class="label">ORCID</span></a></li>
-				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14"
-						class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a>
-				</li>
-			</ul>
-			<ul class="copyright">
-				<li>&copy; Lukas Schmid</li>
-				<li>Based on Designs by <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</div>
-	</footer>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.poptrox.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="publications/code.js"></script>
-	<script src="assets/js/build-opensource.js"></script>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.poptrox.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="publications/code.js"></script>
+  <script src="assets/js/build-opensource.js"></script>
+  <script src="assets/js/build-header-footer.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
