--- a/index.html
+++ b/index.html
@@ -11,160 +11,114 @@
 <html>
 
 <head>
-	<title>Lukas Schmid</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<base target="_blank">
+  <title>Lukas Schmid</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <base target="_blank">
 </head>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RKGKPT9DC6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
-
   gtag('config', 'G-RKGKPT9DC6');
 </script>
 
 <body class="is-preload">
+  <header id="header"></header>
+  <nav id="nav"></nav>
 
-	<!-- Header -->
-	<header id="header">
-		<div class="inner">
-			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.png" alt="" /></a>
-			<h1>
-				<ul class="no-bullets" style="padding-bottom: 2em;">
-					<li><strong>Lukas Schmid</strong>, PhD</li>
-					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a></li>
-				</ul>
-			</h1>
-		</div>
-	</header>
+  <!-- Main -->
+  <div id="main">
 
-	<!-- Navigation -->
-	<nav id="nav">
-		<ul>
-			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
-			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
-			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html" target="_self">Teaching</a></li>
-			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
-		</ul>
-	</nav>
+    <!-- Welcome -->
+    <section id="welcome">
+      <header class="major">
+        <h1>Welcome!</h1>
+      </header>
+      <p> I'm a postdoctoral research fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a>
+        at
+        the
+        <a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a> in the <a href="https://aeroastro.mit.edu/">Department
+          of Aeronautics and Astronautics</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of
+          Technology</a>.
+        <br /><br />
+        My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on
+        active and
+        passive perception in changing environments for robotic interaction and augmented reality. This includes
+        building dense geometric and semantic representations, scene abstraction and understanding, lifelong
+        learning
+        and mapping, and active path and interaction planning to build these representations autonomously and in
+        unknown
+        environments.
+      </p>
+    </section>
 
-	<!-- Main -->
-	<div id="main">
+    <!-- News thumb: WxH ~ 1x0.7-->
+    <section id="news">
+      <h1>News</h1>
+      <div class="row" id="newsarticles">
+      </div>
+      <ul class="actions" id="test">
+        <li><span id="newsbutton" class="button" onclick="newsButtonClick();">More News</span></li>
+      </ul>
+    </section>
 
-		<!-- Welcome -->
-		<section id="welcome">
-			<header class="major">
-				<h1>Welcome!</h1>
-			</header>
-			<p> I'm a postdoctoral research fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a> at
-				the
-				<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a> in the <a
-					href="https://aeroastro.mit.edu/">Department
-					of Aeronautics and Astronautics</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of
-					Technology</a>.
-				<br /><br />
-				My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on
-				active and
-				passive perception in changing environments for robotic interaction and augmented reality. This includes
-				building dense geometric and semantic representations, scene abstraction and understanding, lifelong
-				learning
-				and mapping, and active path and interaction planning to build these representations autonomously and in
-				unknown
-				environments.
-			</p>
-		</section>
+    <!-- Get in touch -->
+    <section id="getintouch">
+      <h1>Get In Touch</h1>
+      <p>If you're interested in any of the topics, have questions, suggestions, ideas, comments, or just want to
+        chat,
+        I'm happy to get in touch! The easiest way is via <a href="mailto:lschmid@mit.edu">email</a>, I do my
+        best to
+        get back to you quickly. Please feel free reach out, looking forward to hearing from you!
+      </p>
 
-		<!-- News thumb: WxH ~ 1x0.7-->
-		<section id="news">
-			<h1>News</h1>
-			<div class="row" id="newsarticles">
-			</div>
-			<ul class="actions" id="test">
-				<li><span id="newsbutton" class="button" onclick="newsButtonClick();">More News</span></li>
-			</ul>
-		</section>
-
-		<!-- Get in touch -->
-		<section id="getintouch">
-			<h1>Get In Touch</h1>
-			<p>If you're interested in any of the topics, have questions, suggestions, ideas, comments, or just want to
-				chat,
-				I'm happy to get in touch! The easiest way is via <a href="mailto:lschmid@mit.edu">email</a>, I do my
-				best to
-				get back to you quickly. Please feel free reach out, looking forward to hearing from you!
-			</p>
-
-			<div class="row">
-				<div class="col-6 col-12-small">
-					<ul class="labeled-icons">
-						<!-- <li>
+      <div class="row">
+        <div class="col-6 col-12-small">
+          <ul class="labeled-icons">
+            <!-- <li>
 							<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
 							000-000-0000
 						</li> -->
-						<li>
-							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-							<a href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>
-						</li>
-					</ul>
-				</div>
-				<div class="col-6 col-12-small">
-					<ul class="labeled-icons">
-						<li>
-							<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-							Room 45-601N<br />
-							77 Massachusetts Avenue <br />
-							Cambridge, MA 02139, USA<br />
-						</li>
-					</ul>
-				</div>
+            <li>
+              <h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+              <a href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-6 col-12-small">
+          <ul class="labeled-icons">
+            <li>
+              <h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+              Room 45-601N<br />
+              77 Massachusetts Avenue <br />
+              Cambridge, MA 02139, USA<br />
+            </li>
+          </ul>
+        </div>
 
-			</div>
-		</section>
+      </div>
+    </section>
 
-	</div>
+  </div>
 
-	<!-- Footer -->
-	<footer id="footer">
-		<div class="inner">
-			<ul class="icons">
-				<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span
-							class="label">Github</span></a>
-				</li>
-				<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" class="icon brands fa-linkedin"><span
-							class="label">LinkedIn</span></a></li>
-				<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" class="icon brands fa-google"><span
-							class="label">Google Scholar</span></a></li>
-			</ul>
-			<ul class="icons">
-				<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
-							class="label">ORCID</span></a></li>
-				<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14"
-						class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-				<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a>
-				</li>
-			</ul>
-			<ul class="copyright">
-				<li>&copy; Lukas Schmid</li>
-				<li>Based on Designs by <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</div>
-	</footer>
+  <!-- Footer -->
+  <footer id="footer"></footer>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.poptrox.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="publications/news.js"></script>
-	<script src="assets/js/build-news.js"></script>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.poptrox.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="publications/news.js"></script>
+  <script src="assets/js/build-news.js"></script>
+  <script src="assets/js/build-header-footer.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
