--- a/code.html
+++ b/code.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="assets/css/main.css" />
   <base target="_blank">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <!-- Google tag (gtag.js) -->
