--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <base target="_blank">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -42,18 +43,11 @@
       <p> I'm a postdoctoral research fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a>
         at
         the
-        <a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a> in the <a href="https://aeroastro.mit.edu/">Department
+        <a href="https://web.mit.edu/sparklab/">MIT SPARK Lab</a> in the <a href="https://aeroastro.mit.edu/">Department
           of Aeronautics and Astronautics</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of
-          Technology</a>.
+          Technology (MIT)</a>.
         <br /><br />
-        My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on
-        active and
-        passive perception in changing environments for robotic interaction and augmented reality. This includes
-        building dense geometric and semantic representations, scene abstraction and understanding, lifelong
-        learning
-        and mapping, and active path and interaction planning to build these representations autonomously and in
-        unknown
-        environments.
+        My main research interests lie in autonomy for intelligent mobile systems, where I focus on active and passive 3D perception of complex, dynamic, and changing environments for robotic interaction and augmented reality. This includes research on dense geometric and semantic scene representations, scene abstraction and understanding, detection and prediction of moving and changing entities, lifelong learning, as well as active perception to enable continuous and autonomous improvement of a robot's scene model and perception capabilities.
       </p>
     </section>
 
