--- a/students.html
+++ b/students.html
@@ -14,6 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <base target="_blank">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <!-- Google tag (gtag.js) -->
