--- a/students.html
+++ b/students.html
@@ -47,6 +47,7 @@
 
       <ul class="actions">
         <li><a href="#lectures" class="button" target="_self">Lectures</a></li>
+        <li><a href="#assistant" class="button" target="_self">Teaching Assistant</a></li>
         <li><a href="#projects" class="button" target="_self">Student Projects</a></li>
       </ul>
     </section>
@@ -54,14 +55,27 @@
     <!-- Lectures -->
     <section id="lectures">
       <h1>Lectures</h1>
-      <p> I was a guest lecturer and/or teaching assistantfor the following courses: </p>
+      <p> I was a guest lecturer for the following courses: </p>
 
       <ul>
-        <!-- class="emphasized"> -->
         <li><a href="https://github.com/UMich-CURLY-teaching/UMich-ROB-530-public"><strong>Mobile Robotics: Methods and
               Algorithms</strong></a>, Graduate course at <a href="https://robotics.umich.edu/">University of
             Michigan</a>, with <a href="https://robotics.umich.edu/profile/maani-ghaffari/">Prof.
             Maani Ghaffari</a>. (2024)</li>
+        <li><a href="https://vnav.mit.edu/"><strong>Visual Navigation for Autonomous
+              Vehicles</strong></a>, Graduate course at <a href="https://www.mit.edu/">MIT</a>, with <a
+            href="https://lucacarlone.mit.edu/">Prof.
+            Luca Carlone</a>. (2023)</li>
+      </ul>
+
+    </section>
+
+    <!-- Teaching -->
+    <section id="assistant">
+      <h1>Teaching Assistant</h1>
+      <p> I was a teaching assistantfor the following courses: </p>
+
+      <ul>
         <li><a href="https://vnav.mit.edu/"><strong>Visual Navigation for Autonomous
               Vehicles</strong></a>, Graduate course at <a href="https://www.mit.edu/">MIT</a>, with <a
             href="https://lucacarlone.mit.edu/">Prof.
@@ -99,8 +113,8 @@
         you are interested in working on a project in the fields of robotic scene understanding, active
         perception, or
         long-term and continual learning, please send a short CV and transcript to <a
-          href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>. Please ensure that you are accepted/eligible for an MIT
-        project first.
+          href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>. <strong>Please ensure that you are accepted/eligible for an MIT
+        project first.</strong>
         <br />
         <br />
         Examples of past projects:
