Rework publications and update news

--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
       <ul class="actions fit">
         <li><a href="#journals" class="button fit" target="_self">Journals</a></li>
         <li><a href="#conferences" class="button fit" target="_self">Conferences</a></li>
-        <li><a href="#Workshops" class="button fit" target="_self">Workshops</a></li>
+        <li><a href="#workshops" class="button fit" target="_self">Workshops</a></li>
         <li><a href="#preprints" class="button fit" target="_self">Preprints</a></li>
         <li><a href="#other" class="button fit" target="_self">Other</a></li>
       </ul>
