--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
         <li><a href="#conferences" class="button fit" target="_self">Conferences</a></li>
         <li><a href="#workshops" class="button fit" target="_self">Workshops</a></li>
         <li><a href="#preprints" class="button fit" target="_self">Preprints</a></li>
-        <li><a href="#other" class="button fit" target="_self">Other</a></li>
+        <li><a href="#theses" class="button fit" target="_self">Theses</a></li>
       </ul>
     </section>
 
@@ -83,8 +83,8 @@
       </table>
     </section>
 
-    <section id="other">
-      <h1>Other</h1>
+    <section id="theses">
+      <h1>Theses</h1>
       <table id="tableOthers">
         <tbody>
         </tbody>
