--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
     <!-- News thumb: WxH ~ 1x0.7-->
     <section id="news">
       <h1>News</h1>
-      <div class="row" id="newsarticles">
-      </div>
+      <div class="row" id="newsarticles"> </div>
       <ul class="actions" id="test">
         <li><span id="newsbutton" class="button" onclick="newsButtonClick();">More News</span></li>
       </ul>
