--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
           of Aeronautics and Astronautics</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of
           Technology (MIT)</a>.
         <br /><br />
-        My main research interests lie in autonomy for intelligent mobile systems, where I focus on active and passive 3D perception of complex, dynamic, and changing environments for robotic interaction and augmented reality. This includes research on dense geometric and semantic scene representations, scene abstraction and understanding, detection and prediction of moving and changing entities, lifelong learning, as well as active perception to enable continuous and autonomous improvement of a robot's scene model and perception capabilities.
+        My main research interests lie in autonomy for intelligent mobile systems, where I focus on active and passive
+        3D perception of complex, dynamic, and changing environments for robotic interaction and augmented reality. This
+        includes research on dense geometric and semantic scene representations, scene abstraction and understanding,
+        detection and prediction of moving and changing entities, lifelong learning, as well as active perception to
+        enable continuous and autonomous improvement of a robot's scene model and perception capabilities.
       </p>
     </section>
 
