--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <header class="major">
         <h1>Welcome!</h1>
       </header>
-      <p> I'm a postdoctoral research fellow working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a>
+      <p> I'm a research scientist working with <a href="https://lucacarlone.mit.edu/">Prof. Luca Carlone</a>
         at
         the
         <a href="https://web.mit.edu/sparklab/">MIT SPARK Lab</a> in the <a href="https://aeroastro.mit.edu/">Department
