fix readin pubs

--- a/publications.html
+++ b/publications.html
@@ -117,6 +117,7 @@
   <script src="publications/conferences.js"></script>
   <script src="publications/workshops.js"></script>
   <script src="publications/preprints.js"></script>
+  <script src="publications/books.js"></script>
   <script src="publications/other.js"></script>
   <script src="assets/js/build-publication.js"></script>
   <script type="text/javascript">
